--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port $PORT --host"
+    "start": "node server.js"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@supabase/supabase-js": "^2.25.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "express": "^4.18.2"
   }
 }
