--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bordspel",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -8,10 +9,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@supabase/supabase-js": "^2.25.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.3.9",
-    "express": "^4.18.2"
+    "vite": "^4.4.0"
   }
 }
